--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -42,6 +42,22 @@
 		}
 	}
 
+	header.navbar-default{
+		&.sticky-menu{
+			.campaigns-header{
+				.navbar-header{
+					.col-xs-12.col-sm-9{
+						img{
+							&:nth-child(3){
+							margin-top: 24px !important;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
 	html:lang(sl){
 		.page-campaign-partners-enterprise-europe-network{
 			.page_title{
@@ -333,6 +349,14 @@
 		&.sticky-menu{
 			.campaigns-header{
 				.navbar-header{
+					.col-xs-12.col-sm-9{
+					img{
+						&:nth-child(3){
+						    width: 43px!important;
+						    height: 28px !important;
+						}
+					}
+				}			
 				}
 			}			
 		}
