--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
@@ -11,7 +11,7 @@ header{
 					margin-right: 1em;
 				}
 				img:nth-child(3){
-					width: 70px;
+					width: 70px !important;
 					padding-right: 1em !important;
 				}
 				.header-text{
