--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -612,7 +612,7 @@ header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
 				    height: 79px !important;
-				    margin-left: 0 !important;
+				    margin-left: 5px !important;
 				}
 			}
 			a:nth-child(2){
