--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -8236,7 +8236,6 @@ input#edit-field-image-und-0-upload::before {
 /*napo film*/
 .page-node-160{
 	#block-views-napo-film-carousel-slidehow{
-		margin-bottom: 60px;
 		height: 665px;
 		#napo_films{
 			width: 100% !important;
@@ -8264,7 +8263,7 @@ input#edit-field-image-und-0-upload::before {
 						    text-align: center;
 						    position: absolute;
     						z-index: 2;
-    						padding: 0px 100px;
+    						padding: 0px 80px;
     						bottom: 0px;
     						margin-bottom: 120px;
     						.field-content{
@@ -8285,6 +8284,7 @@ input#edit-field-image-und-0-upload::before {
 						    p{
 						    	color: white;
 								font-size: 1em;
+								padding: 5px;
 						    }
 						}
 						.video-js{
