--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -17420,7 +17420,6 @@ input#edit-field-image-und-0-upload::before {
 /*end Data visualisation – ageing & OSH*/
 /*napo film*/
 .page-node-160 #block-views-napo-film-carousel-slidehow {
-  margin-bottom: 60px;
   height: 665px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films {
@@ -17453,7 +17452,7 @@ input#edit-field-image-und-0-upload::before {
   text-align: center;
   position: absolute;
   z-index: 2;
-  padding: 0px 100px;
+  padding: 0px 80px;
   bottom: 0px;
   margin-bottom: 120px;
 }
@@ -17475,6 +17474,7 @@ input#edit-field-image-und-0-upload::before {
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title p {
   color: white;
   font-size: 1em;
+  padding: 5px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .video-js {
   max-width: 1000px;
@@ -22292,8 +22292,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     position: absolute;
     z-index: 2;
     padding: 0px 100px;
-    bottom: 0px;
-    margin-bottom: 120px;
+    bottom: 50px;
   }
   .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title a {
     color: white;
