--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4451,9 +4451,10 @@ body{
 	}
 }
 
-html:lang(hr)
+html:lang(hr),
+html:lang(de)
 {
-	.node-type-article article .field-name-body.field-type-text-with-summary{
+	.page-node-165.node-type-article article .field-name-body.field-type-text-with-summary{
 		.become-partner{
 			.coments .col{
 				.more-link{
