REL-1854 RELEASE PRD HWC2022 - 29/07/2020

--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -102,9 +102,6 @@ header.navbar-default{
 				margin-right: 1em;
 				padding-bottom: 7px;
 			}
-			img:nth-child(1){
-				margin-left: 30px;
-			}
 			a img.pull-left{
 			    height: auto;
 			    margin-left: 0px;
@@ -144,8 +141,13 @@ header.navbar-default{
 			.header-text:lang(pl),
 			.header-text:lang(pt),
 			.header-text:lang(fi),
+			{
+				font-size: 1.25em !important;
+				padding-left: 1em;
+			}
+
 			.header-text:lang(ro){
-				font-size: 1.25em;
+				font-size: 1.2em !important;
 				padding-left: 1em;
 			}
 			
@@ -450,6 +452,10 @@ header.navbar-default{
 	}
 }
 
+header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
+    margin-left: 30px;
+}
+
 #navbar > div > div:nth-child(1){
 	padding: 10px 20px 10px 70px;
 }
@@ -592,7 +598,6 @@ header.navbar-default{
 				    -ms-transition: all 0.3s;
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
-			    	background-image: url("/sites/all/themes/hwc_frontend/images/header/logo-sticky.png");
 			    	display: inline-block;
 				    width: 100px;
 				    height: 77px;
@@ -606,45 +611,41 @@ header.navbar-default{
 				    -ms-transition: all 0.3s;
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
-				    width: 100px !important;
-				    height: 77px !important;
-				    display: none;
+				    height: 79px !important;
+				    margin-left: 5px !important;
 				}
 			}
-			a[title*="EU-OSHA"]{
+			a:nth-child(2){
 				-webkit-transition: all 0.3s;
+			    -moz-transition: all 0.3s;
+			    -ms-transition: all 0.3s;
+			    -o-transition: all 0.3s;
+			    transition: all 0.3s;
+		    	display: inline-block;
+			    width: 220px;
+			    height: 83px;
+			    float: left;
+			    display: flex;
+    			align-items: center;
+    			padding-top: 0;
+				img.pull-left{
+					-webkit-transition: all 0.3s;
 				    -moz-transition: all 0.3s;
 				    -ms-transition: all 0.3s;
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
-			    	background-image: url("/sites/all/themes/hwc_frontend/images/header/EU-OSHA-en.png");
-			    	display: inline-block;
 				    width: 220px;
-				    height: 70px;
-				    float: left;
-				    background-repeat: no-repeat;
-				    background-size: 206px;
-				    margin-top: 6px;
-				img.pull-left{
-					-webkit-transition: all 0.3s;
-					    -moz-transition: all 0.3s;
-					    -ms-transition: all 0.3s;
-					    -o-transition: all 0.3s;
-					    transition: all 0.3s;
-					    width: 160px !important;
-    					height: 95px !important;
-					    margin-top: 0px !important;
-					    display: none;
-					   
+    				height: 70px !important;				
+				    margin-top: 0px !important;
 				}
 			}
 			img[alt*="EU logo"]{
 				-webkit-transition: all 0.3s;
-					    -moz-transition: all 0.3s;
-					    -ms-transition: all 0.3s;
-					    -o-transition: all 0.3s;
-					    transition: all 0.3s;
-				padding-top: 42px !important;
+			    -moz-transition: all 0.3s;
+			    -ms-transition: all 0.3s;
+			    -o-transition: all 0.3s;
+			    transition: all 0.3s;
+				padding-top: 27px !important;
 			    padding-bottom: 0px !important;
 			    padding-right: 0em !important;
 			    border-right: none !important;
@@ -653,10 +654,10 @@ header.navbar-default{
 			}
 			.header-text{
 				-webkit-transition: all 0.6s;
-					    -moz-transition: all 0.6s;
-					    -ms-transition: all 0.6s;
-					    -o-transition: all 0.6s;
-					    transition: all 0.6s;
+			    -moz-transition: all 0.6s;
+			    -ms-transition: all 0.6s;
+			    -o-transition: all 0.6s;
+			    transition: all 0.6s;
 				font-size: 1.5em !important;
 			    width: 300px !important;
 			    padding-top: 0.5em !important;
