--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -28,7 +28,11 @@
 					.col-xs-12.col-sm-9{
 						display: flex;
 						a{
-							margin-top: 0.5em;
+							margin-top: 0;
+							height: 76px;
+						    display: flex;
+						    align-items: center;
+						    float: left;
 							&.pull-left{
 								margin: 0 1em 0 0;
 								img{
@@ -43,10 +47,11 @@
 						}
 						img{
 							&:nth-child(3){
-							width: auto !important;
-  						padding: 0em !important;
-							margin: auto 0 0 0;
-							height: 40px;
+							    width: 40px !important;
+							    padding: 0em !important;
+							    margin: auto 0 0 0;
+							    height: auto;
+							    margin-top: 25px;
 							}
 						}
 						.header-text{
@@ -69,7 +74,7 @@
 			    display: flex;
 			    align-self: flex-start;
 					a{
-						margin-top: 3rem;
+						margin-top: 1rem;
 						&.pull-left{
 							margin: 2rem 1em 0 0;
 							img{
@@ -89,7 +94,7 @@
 						&:nth-child(3){
 					    width: auto!important;
 					    padding: 0!important;
-					    margin: 54px 0 0 7px;
+					    margin: 15px 0 0 7px;
 					    height: 36px;
 						}
 					}
@@ -107,6 +112,7 @@
 	.breadcrumb {
 	  padding: 10px !important;
 	}
+	
 	#navbar > div > div:nth-child(1) > div > div > div.col-xs-12.col-sm-3.xs-menu{
 		padding-right: 10px;
 	}
