--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7272,9 +7272,6 @@ header.navbar-default .campaigns-header .navbar-header a.pull-left {
   margin-right: 1em;
   padding-bottom: 7px;
 }
-header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
-  margin-left: 30px;
-}
 header.navbar-default .campaigns-header .navbar-header a img.pull-left {
   height: auto;
   margin-left: 0px;
@@ -7312,9 +7309,12 @@ header.navbar-default .campaigns-header .navbar-header .header-text:lang(mt),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(no),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(pl),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(pt),
-header.navbar-default .campaigns-header .navbar-header .header-text:lang(fi),
+header.navbar-default .campaigns-header .navbar-header .header-text:lang(fi) {
+  font-size: 1.25em !important;
+  padding-left: 1em;
+}
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(ro) {
-  font-size: 1.25em;
+  font-size: 1.2em !important;
   padding-left: 1em;
 }
 header.navbar-default .campaigns-header .navbar-header #block-lang-dropdown-language {
@@ -7600,6 +7600,9 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
   margin-bottom: 39px;
   background-position: center;
 }
+header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
+  margin-left: 30px;
+}
 #navbar > div > div:nth-child(1) {
   padding: 10px 20px 10px 70px;
 }
@@ -7720,7 +7723,6 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    background-image: url("/sites/all/themes/hwc_frontend/images/header/logo-sticky.png");
     display: inline-block;
     width: 100px;
     height: 77px;
@@ -7735,35 +7737,32 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    width: 100px !important;
-    height: 77px !important;
-    display: none;
+    height: 79px !important;
+    margin-left: 5px !important;
   }
-  .sticky-menu .col-sm-9 a[title*="EU-OSHA"] {
+  .sticky-menu .col-sm-9 a:nth-child(2) {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    background-image: url("/sites/all/themes/hwc_frontend/images/header/EU-OSHA-en.png");
     display: inline-block;
     width: 220px;
-    height: 70px;
+    height: 83px;
     float: left;
-    background-repeat: no-repeat;
-    background-size: 206px;
-    margin-top: 6px;
+    display: flex;
+    align-items: center;
+    padding-top: 0;
   }
-  .sticky-menu .col-sm-9 a[title*="EU-OSHA"] img.pull-left {
+  .sticky-menu .col-sm-9 a:nth-child(2) img.pull-left {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    width: 160px !important;
-    height: 95px !important;
+    width: 220px;
+    height: 70px !important;
     margin-top: 0px !important;
-    display: none;
   }
   .sticky-menu .col-sm-9 img[alt*="EU logo"] {
     -webkit-transition: all 0.3s;
@@ -7771,7 +7770,7 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    padding-top: 42px !important;
+    padding-top: 27px !important;
     padding-bottom: 0px !important;
     padding-right: 0em !important;
     border-right: none !important;
@@ -17421,7 +17420,6 @@ input#edit-field-image-und-0-upload::before {
 /*end Data visualisation – ageing & OSH*/
 /*napo film*/
 .page-node-160 #block-views-napo-film-carousel-slidehow {
-  margin-bottom: 60px;
   height: 665px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films {
@@ -17454,7 +17452,7 @@ input#edit-field-image-und-0-upload::before {
   text-align: center;
   position: absolute;
   z-index: 2;
-  padding: 0px 100px;
+  padding: 0px 80px;
   bottom: 0px;
   margin-bottom: 120px;
 }
@@ -17476,6 +17474,7 @@ input#edit-field-image-und-0-upload::before {
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title p {
   color: white;
   font-size: 1em;
+  padding: 5px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .video-js {
   max-width: 1000px;
@@ -20360,15 +20359,12 @@ body.front .homepage-slider blockquote.image-field-caption p {
     padding-right: 1em;
     margin-right: 1em;
   }
-  header.navbar-default .campaigns-header .navbar-header a img.pull-left {
-    width: 150px;
-  }
   header.navbar-default .campaigns-header .navbar-header img:nth-child(3) {
-    width: 70px;
+    width: 70px !important;
     padding-right: 1em !important;
   }
   header.navbar-default .campaigns-header .navbar-header .header-text {
-    font-size: 20px;
+    font-size: 17px;
     width: 238px;
     padding-top: 1em;
     padding-left: 0.8em;
@@ -22296,8 +22292,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     position: absolute;
     z-index: 2;
     padding: 0px 100px;
-    bottom: 0px;
-    margin-bottom: 120px;
+    bottom: 50px;
   }
   .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title a {
     color: white;
@@ -26053,7 +26048,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     margin-right: .5em;
   }
   header.navbar-default .campaigns-header .navbar-header a.pull-left img {
-    margin-left: 15px;
+    margin-left: 5px;
     width: 95px;
   }
   header.navbar-default .campaigns-header .navbar-header a img.pull-left {
@@ -26371,7 +26366,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     margin-right: .5em;
   }
   header.navbar-default .campaigns-header .navbar-header a.pull-left img {
-    margin-left: 15px;
+    margin-left: 5px;
     width: 90px;
   }
   header.navbar-default .campaigns-header .navbar-header a img.pull-left {
