--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7309,9 +7309,12 @@ header.navbar-default .campaigns-header .navbar-header .header-text:lang(mt),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(no),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(pl),
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(pt),
-header.navbar-default .campaigns-header .navbar-header .header-text:lang(fi),
+header.navbar-default .campaigns-header .navbar-header .header-text:lang(fi) {
+  font-size: 1.25em !important;
+  padding-left: 1em;
+}
 header.navbar-default .campaigns-header .navbar-header .header-text:lang(ro) {
-  font-size: 1.25em;
+  font-size: 1.2em !important;
   padding-left: 1em;
 }
 header.navbar-default .campaigns-header .navbar-header #block-lang-dropdown-language {
@@ -7735,7 +7738,7 @@ header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     height: 79px !important;
-    margin-left: 0 !important;
+    margin-left: 5px !important;
   }
   .sticky-menu .col-sm-9 a:nth-child(2) {
     -webkit-transition: all 0.3s;
@@ -7749,7 +7752,7 @@ header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
     float: left;
     display: flex;
     align-items: center;
-    padding-top: 5px;
+    padding-top: 0;
   }
   .sticky-menu .col-sm-9 a:nth-child(2) img.pull-left {
     -webkit-transition: all 0.3s;
@@ -7767,7 +7770,7 @@ header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    padding-top: 42px !important;
+    padding-top: 27px !important;
     padding-bottom: 0px !important;
     padding-right: 0em !important;
     border-right: none !important;
@@ -17417,7 +17420,6 @@ input#edit-field-image-und-0-upload::before {
 /*end Data visualisation – ageing & OSH*/
 /*napo film*/
 .page-node-160 #block-views-napo-film-carousel-slidehow {
-  margin-bottom: 60px;
   height: 665px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films {
@@ -17450,7 +17452,7 @@ input#edit-field-image-und-0-upload::before {
   text-align: center;
   position: absolute;
   z-index: 2;
-  padding: 0px 100px;
+  padding: 0px 80px;
   bottom: 0px;
   margin-bottom: 120px;
 }
@@ -17472,6 +17474,7 @@ input#edit-field-image-und-0-upload::before {
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title p {
   color: white;
   font-size: 1em;
+  padding: 5px;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .video-js {
   max-width: 1000px;
@@ -20356,15 +20359,12 @@ body.front .homepage-slider blockquote.image-field-caption p {
     padding-right: 1em;
     margin-right: 1em;
   }
-  header.navbar-default .campaigns-header .navbar-header a img.pull-left {
-    width: 150px;
-  }
   header.navbar-default .campaigns-header .navbar-header img:nth-child(3) {
-    width: 70px;
+    width: 70px !important;
     padding-right: 1em !important;
   }
   header.navbar-default .campaigns-header .navbar-header .header-text {
-    font-size: 20px;
+    font-size: 17px;
     width: 238px;
     padding-top: 1em;
     padding-left: 0.8em;
@@ -22292,8 +22292,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     position: absolute;
     z-index: 2;
     padding: 0px 100px;
-    bottom: 0px;
-    margin-bottom: 120px;
+    bottom: 50px;
   }
   .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title a {
     color: white;
@@ -26049,7 +26048,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     margin-right: .5em;
   }
   header.navbar-default .campaigns-header .navbar-header a.pull-left img {
-    margin-left: 15px;
+    margin-left: 5px;
     width: 95px;
   }
   header.navbar-default .campaigns-header .navbar-header a img.pull-left {
@@ -26367,7 +26366,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
     margin-right: .5em;
   }
   header.navbar-default .campaigns-header .navbar-header a.pull-left img {
-    margin-left: 15px;
+    margin-left: 5px;
     width: 90px;
   }
   header.navbar-default .campaigns-header .navbar-header a img.pull-left {
