HW20-104 - Publications detail page - Display the Order printed copy

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -294,9 +294,8 @@
 
 	.content-order-copy{
 		img {
-		    float: none;
-		    margin-left: 0;
-		    margin-top: 1em;
+		    width: 78px;
+			top: 22px;
 		}
 	}
 
