--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1987,24 +1987,30 @@ span.title-select {
 .content-order-copy {
   color: #003399;
   padding: 1.5em 0 1em 1em;
-  border-top: 10px solid #FFF;
+  margin-top: 10px;
   background: #daea96;
   float: left;
   width: 100%;
   margin-bottom: 1em;
+  position: relative;
+  border-radius: 5px;
 }
 .content-order-copy img {
   width: 120px;
   height: auto;
   float: right;
   margin-left: 1em;
+  position: absolute;
+  right: 10px;
+  top: 14px;
 }
 .content-order-copy a {
   color: #003399;
   font-weight: bold;
   text-decoration: underline;
   font-size: 1.2rem;
-  padding-right: 20px;
+  width: 135px;
+  padding-right: 0;
   float: left;
 }
 .content-order-copy a:hover {
@@ -2012,9 +2018,6 @@ span.title-select {
 }
 .content-order-copy a:hover img {
   opacity: 0.8;
-}
-.content-order-copy {
-  display: none;
 }
 div.publications-detail-right-column > a.download {
   margin-left: 3em;
@@ -8762,9 +8765,8 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     width: 84% !important;
   }
   .content-order-copy img {
-    float: none;
-    margin-left: 0;
-    margin-top: 1em;
+    width: 78px;
+    top: 22px;
   }
   .page-events #block-osha-newsletter-osha-newsletter-events-subscribe {
     display: none;
@@ -11518,6 +11520,10 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
   .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title {
     display: none;
+  }
+  .content-order-copy img {
+    width: 120px;
+    top: 14px;
   }
 }
 @media (max-width: 600px) {
