MHWC-210: European Week: The news box buttons are overlapped

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5273,6 +5273,7 @@ body.european-week .view-news .media > .pull-left {
 body.press-room .view-news ul.media-list li.media,
 body.european-week .view-news ul.media-list li.media {
   border-bottom: 1px solid #ACC700;
+  position: relative;
   padding-bottom: 2em;
   padding-top: 1em;
 }
@@ -5359,8 +5360,8 @@ body.european-week .view-frontpage-events .content-event {
 }
 body.press-room .media-body,
 body.european-week .media-body {
-  height: 220px;
-  position: relative;
+  height: auto;
+  padding-bottom: 3em;
 }
 body.press-room .media-body p,
 body.european-week .media-body p {
@@ -5370,7 +5371,7 @@ body.press-room .media-body a.more-link,
 body.european-week .media-body a.more-link {
   float: left;
   position: absolute;
-  bottom: 0;
+  bottom: 2.4em;
   margin-left: 0;
   transition: 300ms;
   background-color: transparent;
@@ -5386,9 +5387,6 @@ body.european-week .more-link {
   clear: both;
 }
 /* HW20-785 */
-body.press-room .media-body {
-  padding-bottom: 2em;
-}
 body.european-week #european_week_date {
   color: #FFF;
   font-size: 2.2em;
@@ -5397,7 +5395,8 @@ body.european-week #european_week_date {
   font-weight: bold;
 }
 body.european-week .view-frontpage-events .views-row {
-  height: 128px;
+  min-height: 128px;
+  height: auto;
   padding-bottom: 5px;
   padding-top: 5px;
 }
@@ -5432,7 +5431,6 @@ body.european-week #block-views-news-european-week {
 }
 body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   border-bottom: 0;
-  padding-bottom: 0;
 }
 .page-node-linguatools #block-system-main {
   padding: 3em;
