--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -1709,7 +1709,7 @@ header.navbar-default{
 	    	}
 	    	.more-link{
 	    		display: inline-block;
-	    		padding-left: 0;
+	    		//padding-left: 0;
 	    	}
 
 	    	.field-type-datetime, .field.field-name-field-summary, .field-name-body{
