--- a/docroot/sites/all/themes/hwc_frontend/less/footer.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/footer.less
@@ -48,7 +48,7 @@
 	div.on-the-web{
 		display: inline-block;
 		float: right;
-  		margin-right: 40px;
+  	margin-right: 0px;
 		text-align: right;
 		a{
 			width: 20px;
@@ -60,7 +60,7 @@
 			}
 		}
 		span:last-child{
-			margin-right: @margin;
+			//margin-right: @margin;
 		}
 		.otw-twitter{
 			a{
