--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -808,31 +808,32 @@
 
 	/*Footer*/
 	.footer{
-		padding-left: 0;
-		.on-the-web{
-			span:nth-child(1){
-				width: auto;
-			}
-		}
-
+		padding: 0;
 		div.container{
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+		.content-second-footer{
+			display: flex;
+			width: 100%;
+			margin: 0;
+			float: none;
+		}
 		div.on-the-web{
-			margin-right: 0;
+			margin: 1rem 0;
+    	display: flex;
+	    justify-content: flex-start;
+	    width: 100%;
+			span:nth-child(1){
+				width: auto;
+			}
 		}
-		div.on-the-web a{
-			margin-left: 3px;
-		}
-
 		h2, p {
 			display: block;
 		}
-
 		.intro-footer{
-			float: left;
-			padding-bottom: 2em;
+			float: none;
+			padding-bottom: 1em;
 		}
 	}
 
