--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -818,7 +818,24 @@
 	.page-node-165 .became-green-block{
 		max-width: 75%;
 	}
-
+	.footer{
+		.content-second-footer{
+			display: block;
+	    width: 100%;
+      margin: 1rem 0 2rem;
+		}
+		div.on-the-web{
+			margin: 1rem 0;
+			display: flex;
+			justify-content: flex-start;
+			width: 100%;
+			span:nth-child(1) {
+	      padding: 0.5rem 0.5rem 0.5rem 0 !important;
+			  float: left;
+			  text-align: left;
+			}
+		} 
+	} 
 }
 
 
