--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2905,7 +2905,7 @@ span.pages{
 		margin-top: 15px;
 		span:nth-child(1){
 			padding-top: 5px;
-			padding-right: 2em;
+			padding-right: 0.2em;
 		}
 
 		span{
@@ -2959,6 +2959,7 @@ span.pages{
 
 .region-footer{
   clear: both;
+  margin-bottom: 1rem;
 }
 
 .footer{
