MHWC-238 - Homepage ES: What is the issue button does not fit correctly in the green box

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -284,7 +284,8 @@ select{
 
 .btn-background-transparent{
 	background: transparent;
-	width: 208px;
+	min-width: 208px;
+	width: auto;
     color: #FFF;
     border: 3px solid #FFF;
     padding: 0.6em 2.5em 0.6em 1.5em;
