--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -259,6 +259,13 @@
 		}
 	}
 
+	#block-views-news-press-room{
+		.more-link a{
+			font-size: 0.85em;
+			background: url(../images/ico-plus-20.png) no-repeat 99.5% 1px #0030a0;
+		}
+	}
+
 }
 
 @media (max-width: 370px) { 
