--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -6355,13 +6355,12 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
 }
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-first p,
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p {
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   color: #FFF;
   padding-top: 1em;
-  padding-bottom: 2em;
-  max-width: 540px;
+  padding-bottom: 1.5em;
+  max-width: 575px;
   margin: 0 auto;
   font-size: 1.2em;
 }
@@ -6371,8 +6370,13 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
   justify-content: center;
   align-items: center;
 }
-body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p {
+body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-first > p:nth-child(4) {
   max-width: 600px;
+  display: flex;
+}
+body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p:nth-child(4) {
+  max-width: 600px;
+  display: flex;
 }
 body.front-page .main-container #block-views-partners-block-1 {
   margin-top: 2em;
@@ -7478,7 +7482,7 @@ html:lang(el) body.page-tools-and-publications-practical-tools .views-exposed-wi
   background: #FFF;
   border: 2px solid #bcd75b;
   border-radius: 7px;
-  width: 215px;
+  width: 320px;
   padding: 1em;
   z-index: 9999999;
   position: absolute;
@@ -7495,6 +7499,10 @@ html:lang(el) body.page-tools-and-publications-practical-tools .views-exposed-wi
 }
 .contentPop {
   padding-right: 15px;
+}
+.contentPop p {
+  color: #59595A !important;
+  font-size: 14px !important;
 }
 /* Video */
 body.video-page .col-md-9 {
