--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7092,13 +7092,12 @@ body.front-page{
 					}
 
 					p{
-						display: flex;
 						flex-wrap: wrap;
 						justify-content: center;
 						color: #FFF;
 					    padding-top: 1em;
-					    padding-bottom: 2em;
-					    max-width: 540px;
+					    padding-bottom: 1.5em;
+					    max-width: 575px;
 					    margin: 0 auto;
 					    font-size: 1.2em;
 					}
@@ -7110,9 +7109,17 @@ body.front-page{
 					}
 				}
 
+				.views-row-first{
+					> p:nth-child(4){
+						max-width: 600px;
+					    display: flex;
+					}
+				} 
+
 				.views-row-last{
-					p{
+					p:nth-child(4){
 					    max-width: 600px;
+					    display: flex;
 					}
 				}
 			}
@@ -8466,11 +8473,12 @@ html:lang(el){
 	background: #FFF;
 	border: 2px solid #bcd75b;
     border-radius: 7px;
-    width: 215px;
+    width: 320px;
     padding: 1em;
     z-index: 9999999;
     position: absolute;
     margin-top: -1em;
+
 }
 
 .closePop{
@@ -8485,6 +8493,10 @@ html:lang(el){
 
 .contentPop{
 	padding-right: 15px;
+	p{
+		color:#59595A !important;
+		font-size: 14px !important;
+	}
 }
 
 /* Video */
